Commentation and Laid Down The repository Time to implement and Test!!

--- a/PersistentLayer/PersistentLayer.csproj
+++ b/PersistentLayer/PersistentLayer.csproj
@@ -58,7 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="IRepository\IGenericRepo.cs" />
+    <Compile Include="IRepository\IAdminRepository.cs" />
+    <Compile Include="IRepository\IEventRepository.cs" />
+    <Compile Include="IRepository\IGenericRepo\IGenericRepo.cs" />
+    <Compile Include="IRepository\ICauseRepository.cs" />
+    <Compile Include="IRepository\IStoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AdminRepository.cs" />
     <Compile Include="Repository\CauseRepository.cs" />
