--- a/MyDatabase/MyDatabase.csproj
+++ b/MyDatabase/MyDatabase.csproj
@@ -58,8 +58,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Migrations\202203081415420_test.cs" />
+    <Compile Include="Migrations\202203081415420_test.designer.cs">
+      <DependentUpon>202203081415420_test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seed\Seeding.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -70,6 +75,11 @@
       <Project>{8429517f-8ee2-4bd4-a8e3-8bd6d8b63e65}</Project>
       <Name>Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202203081415420_test.resx">
+      <DependentUpon>202203081415420_test.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
