Edit Layout Add Partial Causes and Single Cause

--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -477,6 +477,8 @@
     <Content Include="Views\Event\EventsIndex.cshtml" />
     <Content Include="Views\Event\OrganizeEvents.cshtml" />
     <Content Include="Views\Event\CreateEvent.cshtml" />
+    <Content Include="Views\Causes\_Causes.cshtml" />
+    <Content Include="Views\Causes\_SingleCause.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
