--- a/PersistentLayer/PersistentLayer.csproj
+++ b/PersistentLayer/PersistentLayer.csproj
@@ -83,6 +83,8 @@
     <Compile Include="IRepository\IEventRepository.cs" />
     <Compile Include="IRepository\IGenericRepo\IGenericRepo.cs" />
     <Compile Include="IRepository\ICauseRepository.cs" />
+    <Compile Include="IRepository\IInventoryRepository.cs" />
+    <Compile Include="IRepository\IItemReposiory.cs" />
     <Compile Include="IRepository\IStoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AdminRepository.cs" />
