--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -189,6 +189,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\API\APICausesController.cs" />
+    <Compile Include="Controllers\API\APIEventsController.cs" />
     <Compile Include="Controllers\ArchiveController.cs" />
     <Compile Include="Controllers\CauseController.cs" />
     <Compile Include="Controllers\EventController.cs" />
