--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -259,18 +259,18 @@
     <Content Include="Assets\images\background\2.jpg" />
     <Content Include="Assets\images\background\5.png" />
     <Content Include="Assets\images\background\pb.jpg" />
-    <Content Include="Assets\images\blog\14.jpg" />
-    <Content Include="Assets\images\blog\15.jpg" />
-    <Content Include="Assets\images\blog\7.jpg" />
-    <Content Include="Assets\images\blog\c1.png" />
-    <Content Include="Assets\images\blog\c2.png" />
-    <Content Include="Assets\images\blog\p1.jpg" />
-    <Content Include="Assets\images\blog\post-1.jpg" />
-    <Content Include="Assets\images\blog\post-2.jpg" />
-    <Content Include="Assets\images\blog\post-3.jpg" />
-    <Content Include="Assets\images\blog\sb.jpg" />
-    <Content Include="Assets\images\blog\sb1.jpg" />
-    <Content Include="Assets\images\blog\sb2.jpg" />
+    <Content Include="Assets\images\causes\blog\14.jpg" />
+    <Content Include="Assets\images\causes\blog\15.jpg" />
+    <Content Include="Assets\images\causes\blog\7.jpg" />
+    <Content Include="Assets\images\causes\blog\c1.png" />
+    <Content Include="Assets\images\causes\blog\c2.png" />
+    <Content Include="Assets\images\causes\blog\p1.jpg" />
+    <Content Include="Assets\images\causes\blog\post-1.jpg" />
+    <Content Include="Assets\images\causes\blog\post-2.jpg" />
+    <Content Include="Assets\images\causes\blog\post-3.jpg" />
+    <Content Include="Assets\images\causes\blog\sb.jpg" />
+    <Content Include="Assets\images\causes\blog\sb1.jpg" />
+    <Content Include="Assets\images\causes\blog\sb2.jpg" />
     <Content Include="Assets\images\causes\1.jpg" />
     <Content Include="Assets\images\causes\1.png" />
     <Content Include="Assets\images\causes\2.jpg" />
@@ -336,6 +336,8 @@
     <Content Include="Assets\images\missions\1.png" />
     <Content Include="Assets\images\missions\2.png" />
     <Content Include="Assets\images\missions\3.png" />
+    <Content Include="Assets\images\missions\help-getty.jpg" />
+    <Content Include="Assets\images\missions\Love-people-1680x768.jpg" />
     <Content Include="Assets\images\missions\per.jpg" />
     <Content Include="Assets\images\missions\person2.jpg" />
     <Content Include="Assets\images\missions\person3.jpg" />
