--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -137,6 +137,7 @@
     <Compile Include="ManageViewModel\SetPasswordViewModel.cs" />
     <Compile Include="ManageViewModel\VerifyPhoneNumberViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetRoles.cs" />
     <Compile Include="Story.cs" />
   </ItemGroup>
   <ItemGroup>
