--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -323,6 +323,58 @@
     <Content Include="Assets\images\icons\play.png" />
     <Content Include="Assets\images\icons\preloader.gif" />
     <Content Include="Assets\images\icons\scale.png" />
+    <Content Include="Assets\images\ImagesSaved\106052.jpg" />
+    <Content Include="Assets\images\ImagesSaved\1595391.jpg" />
+    <Content Include="Assets\images\ImagesSaved\3959485.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6347750.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6348119.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6348123.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6476772.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6565752.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6565756.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6590913.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6590920.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6590921.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6590927.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6591147.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6591148.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6591151.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6591159.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6591165.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6591166.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646778.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646883.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646899.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646903.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646907.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646914.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646917.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646918.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646967.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646974.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646979.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6646987.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6647056.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6647128.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994806.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994831.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994833.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994854.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994855.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994869.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994963.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994985.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6994992.jpg" />
+    <Content Include="Assets\images\ImagesSaved\6995015.jpg" />
+    <Content Include="Assets\images\ImagesSaved\7156187.jpg" />
+    <Content Include="Assets\images\ImagesSaved\7298844.jpg" />
+    <Content Include="Assets\images\ImagesSaved\7475725.jpg" />
+    <Content Include="Assets\images\ImagesSaved\7551591.jpg" />
+    <Content Include="Assets\images\ImagesSaved\7551595.jpg" />
+    <Content Include="Assets\images\ImagesSaved\8078392.jpg" />
+    <Content Include="Assets\images\ImagesSaved\9090746.jpg" />
+    <Content Include="Assets\images\ImagesSaved\9168809.jpg" />
+    <Content Include="Assets\images\ImagesSaved\9169661.jpg" />
     <Content Include="Assets\images\logo\footer.png" />
     <Content Include="Assets\images\logo\logo.png" />
     <Content Include="Assets\images\logo\map-marker.png" />
@@ -550,11 +602,6 @@
       <Project>{71f00586-65cd-4065-9c58-cf02840c8be3}</Project>
       <Name>PersistentLayer</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\CommunityKitchen\Assets\images\ImagesSaved\**">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
