--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -381,15 +381,28 @@
     <Content Include="Assets\images\missions\1.png" />
     <Content Include="Assets\images\missions\2.png" />
     <Content Include="Assets\images\missions\3.png" />
+    <Content Include="Assets\images\missions\foodcontr.jpeg" />
+    <Content Include="Assets\images\missions\granny.jpg" />
+    <Content Include="Assets\images\missions\halp.jpg" />
+    <Content Include="Assets\images\missions\Help-1024x575.jpg" />
     <Content Include="Assets\images\missions\help-getty.jpg" />
+    <Content Include="Assets\images\missions\hugs.jpg" />
+    <Content Include="Assets\images\missions\images.jpg" />
+    <Content Include="Assets\images\missions\IMG_3630_JPG 1280x853.jpg" />
+    <Content Include="Assets\images\missions\istockphoto-1194548736-612x612.jpg" />
+    <Content Include="Assets\images\missions\kid1.jpg" />
     <Content Include="Assets\images\missions\Love-people-1680x768.jpg" />
     <Content Include="Assets\images\missions\per.jpg" />
     <Content Include="Assets\images\missions\person2.jpg" />
     <Content Include="Assets\images\missions\person3.jpg" />
     <Content Include="Assets\images\missions\person4.jpg" />
     <Content Include="Assets\images\missions\person5.jpg" />
+    <Content Include="Assets\images\missions\pexels-photo-3280130.jpeg" />
     <Content Include="Assets\images\missions\ph.jpg" />
     <Content Include="Assets\images\missions\pr.jpg" />
+    <Content Include="Assets\images\missions\staffservingfoodinhomele_509845-2.jpg" />
+    <Content Include="Assets\images\missions\support_0.jpg" />
+    <Content Include="Assets\images\missions\ukraine_get_help_red_cross.jpg" />
     <Content Include="Assets\images\missions\zmp.jpg" />
     <Content Include="Assets\images\news\1.jpg" />
     <Content Include="Assets\images\news\2.jpg" />
@@ -496,6 +509,9 @@
     <Content Include="Assets\fonts\revicons.ttf" />
     <Content Include="Assets\fonts\revicons.woff" />
     <Content Include="Assets\fonts\_flaticon.scss" />
+    <Content Include="Assets\images\missions\homeless.webp" />
+    <Content Include="Assets\images\missions\noreason.webp" />
+    <Content Include="Assets\images\missions\people.webp" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\ChartPie.js" />
     <Content Include="Scripts\LoginRegister.js" />
