--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -395,6 +395,7 @@
     <Content Include="Assets\images\ImagesSaved\homeless.jpg" />
     <Content Include="Assets\images\ImagesSaved\kostas.jpg" />
     <Content Include="Assets\images\ImagesSaved\people.jpg" />
+    <Content Include="Assets\images\ImagesSaved\single-cause.jpg" />
     <Content Include="Assets\images\ImagesSaved\soup11.jpg" />
     <Content Include="Assets\images\ImagesSaved\soup13.jpg" />
     <Content Include="Assets\images\ImagesSaved\soup6.jpg" />
@@ -449,10 +450,11 @@
     <Content Include="Assets\images\slider\1.jpg" />
     <Content Include="Assets\images\slider\2.jpg" />
     <Content Include="Assets\images\slider\3.jpg" />
-    <Content Include="Assets\images\team\1.jpg" />
-    <Content Include="Assets\images\team\2.jpg" />
-    <Content Include="Assets\images\team\3.jpg" />
-    <Content Include="Assets\images\team\4.jpg" />
+    <Content Include="Assets\images\team\dimitris.jpg" />
+    <Content Include="Assets\images\team\doggo2.jpg" />
+    <Content Include="Assets\images\team\ioanis.jpg" />
+    <Content Include="Assets\images\team\laptop.jpeg" />
+    <Content Include="Assets\images\team\niki.jpg" />
     <Content Include="Assets\js\bootstrap-select.min.js" />
     <Content Include="Assets\js\bootstrap.min.js" />
     <Content Include="Assets\js\bxslider.js" />
@@ -535,12 +537,12 @@
     <Content Include="Assets\fonts\revicons.woff" />
     <Content Include="Assets\fonts\_flaticon.scss" />
     <Content Include="Assets\images\ImagesSaved\homeless.webp" />
-    <Content Include="Assets\images\ImagesSaved\noreason.webp" />
+    <Content Include="Assets\images\ImagesSaved\noreason.jpg" />
     <Content Include="Assets\images\ImagesSaved\people.webp" />
-    <Content Include="Assets\images\ImagesSaved\tornado.webp" />
+    <Content Include="Assets\images\ImagesSaved\tornado.jpg" />
     <Content Include="Assets\images\ImagesSaved\foodbox.webp" />
-    <Content Include="Assets\images\ImagesSaved\soup5.webp" />
-    <Content Include="Assets\images\ImagesSaved\soup4.webp" />
+    <Content Include="Assets\images\ImagesSaved\soup5.jpg" />
+    <Content Include="Assets\images\ImagesSaved\soup4.jpg" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\ChartPie.js" />
     <Content Include="Scripts\LoginRegister.js" />
