--- a/CommunityKitchen/Web.config
+++ b/CommunityKitchen/Web.config
@@ -17,6 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="Angular" value="http://localhost:4200/" />
+	<!--<add key="FormSubmit" value="https://localhost:44342"/>-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
