--- a/CommunityKitchen/CommunityKitchen.csproj
+++ b/CommunityKitchen/CommunityKitchen.csproj
@@ -402,7 +402,7 @@
     <Content Include="Assets\images\ImagesSaved\soup1.jpg" />
     <Content Include="Assets\images\ImagesSaved\soup2.jpg" />
     <Content Include="Assets\images\ImagesSaved\soup6.jpg" />
-    <Content Include="Assets\images\ImagesSaved\soup3.png" />
+    <Content Include="Assets\images\ImagesSaved\soup7.jpg" />
     <Content Include="Assets\images\ImagesSaved\ukraine.jpg" />
     <Content Include="Assets\images\ImagesSaved\war.jpg" />
     <Content Include="Assets\images\logo\footer.png" />
